# fsmentry

./: Cargo.toml  README.md  example.dot  example.dsl  full.dot  full.dsl
cli/: Cargo.toml
common-docs/: dot.md  dsl.md
core/: Cargo.toml
core/src/: args.rs  dsl.rs  graph.rs  lib.rs  util.rs
core/tests/: test.rs
core/tests/check_compile/: full.rs  simple.rs
diagrams/: doc.dot  doc.dsl  full.dsl
examples/: explore.rs
macros/: Cargo.toml
macros/src/: lib.rs  svg.rs
src/: dsl.rs  example.dsl  example.rs  lib.rs  main.rs
tests/: example.rs
trybuild/pass/: full-dot.rs  full-dsl.rs  traffic-light-dot.rs  traffic-light-dsl.rs
