[package]
name = "fsmentry"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
fsmentry-core.workspace = true
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }

[dev-dependencies]
derive-quickcheck-arbitrary = "0.1.3"
proc-macro2 = { version = "1.0.68", default-features = false }
quickcheck = "1.0.3"
syn = { version = "2", features = ["extra-traits"] }
trybuild = { version = "1.0.85", features = ["diff"] }
assert_cmd = "2.0.12"
prettyplease = "0.2.31"
expect-test = "1.5.1"


[workspace.package]
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/aatifsyed/fsmentry"
documentation = "https://docs.rs/fsmentry"
homepage = "https://crates.io/crates/fsmentry"
readme = "README.md"
description = "Finite State Machines with an entry API and data storage"

[workspace]
members = ["core", "cli"]

[workspace.dependencies]
fsmentry-core = { version = "0.2.0", path = "core" }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
