[package]
name = "fsmentry-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
fsmentry-core.workspace = true
prettyplease = "0.2"
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
syn-miette = "0.3.0"
