[package]
name = "fsmentry-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
derive-quote-to-tokens = "0.1.0"
derive-syn-parse = "0.2"
heck = "0.5"
itertools = "0.13"
proc-macro2 = { version = "1.0.67", default-features = false }
syn = { workspace = true, features = ["full", "parsing", "clone-impls"] }
syn-graphs.workspace = true
quote.workspace = true
