[package]
name = "fsmentry-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
proc-macro2 = { version = "1.0.67", default-features = false }
syn = { workspace = true, features = ["full", "parsing", "clone-impls"] }
syn-graphs.workspace = true
quote.workspace = true

[dev-dependencies]
prettyplease = "0.2.15"
expect-test = "1.5.1"
