[package]
name = "fsmentry-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", features = [
    "clone-impls",
    "full",
    "parsing",
    "printing",
], default-features = false }

[dev-dependencies]
prettyplease = "0.2.15"
expect-test = "1.5.1"
