[package]
name = "fsmentry-macros"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { workspace = true, features = ["proc-macro"] }
fsmentry-core.workspace = true
quote = { workspace = true, features = ["proc-macro"] }
