[package]
name = "fsmentry-macros"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[lib]
proc-macro = true

[features]
svg = []

[dependencies]
syn = { workspace = true, features = ["proc-macro"] }
fsmentry-core.workspace = true
quote = { workspace = true, features = ["proc-macro"] }
